--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -38,10 +38,26 @@ $linkColor: $darkGrey;
     @include box-shadow(#FFF 0 0 3px, rgba(#000,0.2) 0 0 3px inset);
     @include border-radius();
     & > * {
-        margin: 20px;
+        padding: 20px;
     }
     &:hover {
         background-color: rgba(#000,0.05);
+    }
+}
+
+@mixin blueinnerblock() {
+
+    background: $higlightColor;
+    color: #fafafa;
+    font-weight: bold;
+    @include text-shadow(0 0 3px #000);
+
+    @include border-radius(5px);
+    @include box-shadow(#FFF 0 0 3px, rgba(#000,0.3) 0 0 5px inset);
+    @include column(9,true);
+
+    & > * {
+        margin: 20px;
     }
 }
 
@@ -64,6 +80,11 @@ a {
 }
 a:hover {
     color: $hoverColor;
+}
+
+.corps {
+    margin: 48px 0;
+    line-height: 32px;
 }
 
 #metacontainer{
@@ -104,36 +125,37 @@ $menuItemWidth: 8em;
 
 nav {
     border-bottom: solid 1px rgba(0,0,0,0.1);
-}
-nav ul {
-    list-style-type: none;
-}
-nav ul li { 
-    display: inline-block; 
-    height: $navHeight;
-    margin-right: 0;
-    width: $menuItemWidth;
-    text-align: center;
-    border-left: solid 1px rgba(255,255,255,0.1);
-    border-right: solid 1px rgba(0,0,0,0.2);
-}
-nav ul li * {
-    display: block;
-    margin-right: 0px;
-    margin-left: 0px;
-    padding: 0 10px; 
-    height: 100%; 
-    @include text-shadow( -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2));
-}
-nav ul li span.active {
-    background-color: $selectedBlockColor;
-}
-nav ul li a { 
-    color: rgba(255,255,255,0.8); 
-}
-nav ul li a:hover { 
-    color: rgba(255,255,255,0.8);
-    background-color: rgba(255,255,255,0.1);
+
+    ul {
+        list-style-type: none;
+        li { 
+            display: inline-block; 
+            height: $navHeight;
+            margin-right: 0;
+            width: $menuItemWidth;
+            text-align: center;
+            border-left: solid 1px rgba(255,255,255,0.1);
+            border-right: solid 1px rgba(0,0,0,0.2);
+            * {
+                display: block;
+                margin-right: 0px;
+                margin-left: 0px;
+                padding: 0 10px; 
+                height: 100%; 
+                @include text-shadow( -1px -1px rgba(0,0,0,0.2), 1px 1px rgba(0,0,0,0.2));
+            }
+            span.active {
+                background-color: $selectedBlockColor;
+            }
+            a { 
+                color: rgba(255,255,255,0.8); 
+                &:hover { 
+                    color: rgba(255,255,255,0.8);
+                    background-color: rgba(255,255,255,0.1);
+                }
+            }
+        }
+    }
 }
 
 header #choixrss, header #choixlang {
@@ -147,81 +169,79 @@ header #choixrss, header #choixlang {
     text-align: center;
     border-left: solid 1px rgba(255,255,255,0.1);
     border-right: solid 1px rgba(0,0,0,0.2);
-}
-header #choixrss a, header #choixlang a {
-    color: $lightGrey;
-    display: block;
-    height: 100%;
-    width: $menuItemWidth;
-    padding: 0 10px 0 10px;
-    text-align: center;
-}
-header #choixrss a:hover, header #choixlang a:hover {
-    color: rgba(255,255,255,0.8);
-    background-color: rgba(255,255,255,0.1);
-}
-
-#main {
-    margin: 0px auto;
-}
-#container {
-    margin: 0px auto;
+    a {
+        color: $lightGrey;
+        display: block;
+        height: 100%;
+        width: $menuItemWidth;
+        padding: 0 10px 0 10px;
+        text-align: center;
+    }
+    a:hover {
+        color: rgba(255,255,255,0.8);
+        background-color: rgba(255,255,255,0.1);
+    }
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Expletus Sans',Futura,sans-serif;
-    @include text-shadow( 0px -1px 0px $higlightColorShadow, 0px 1px 0px #FFF);
-    font-weight: bold;
-    color: $titleColor;
-    margin: 48px 0;
-}
 nav ul li, #choixlang, #choixrss {
     a:hover {
         @include box-shadow(#337 0 0 8px inset);
     }
 }
 
+#main, #container {
+    margin: 0px auto;
+}
+
 h1, h2, h3, h4, h5, h6 {
+
+    font-family: 'Expletus Sans',Futura,sans-serif;
+    @include text-shadow( 0px -1px 0px $higlightColorShadow, 0px 1px 0px #FFF);
+    font-weight: bold;
+    color: $titleColor;
+    margin: 48px 0;
     text-align: center;
+
     a:hover {
         @include text-shadow( 0px -1px 0px $hoverColorShadow, 0px 1px 0px #FFF);
     }
+
 }
+
 article article {
-    .date { float: right; }
+    @include innerblock();
+    .date { float: right; padding: 0; margin: 20px; }
     h1, h2, h3, h4, h5, h6 {
         text-align: left;
-        font-size: 25px;
+        font-size: 36px;
         line-height: 30px;
-        margin: 0;
-
+        margin: 0 0 16px;
     }
 }
 
 .intro {
     margin-bottom: 24px;
 }
+
 .sc {
   font-variant: small-caps;
 }
 
 .block {
     @include innerblock();
-    @include column(3,false);
     margin-bottom: 48px;
     height: 3 * 48px ;
     h3 {
         text-size: .6em;
         text-align: left;
+        margin: 0 0 12px;
     }
     cursor: pointer;
-}
-.block {
     @include column(3);
     float: left;
 }
-.block.right {
-    @include column(3);
+.right {
+    float: right;
 }
 .left {
     float: left;
@@ -230,57 +250,46 @@ article article {
     clear: both;
 }
 .slideshow {
-    @include border-radius(5px);
-    @include box-shadow(#FFF 0 0 3px, rgba(#000,0.3) 0 0 5px inset);
-    @include text-shadow(0 0 3px #000);
-    font-weight: bold;
-    color: #fafafa;
-    @include column(9,true);
-    background: $higlightColor;
-}
-
-.corps {
-    margin: 48px 0;
-    line-height: 32px;
+    @include blueinnerblock();
+    & > * {
+        padding: 3em;
+    }
 }
 
 .date {
-  font-size: 0.8em;
-  border: 1px solid $darkGrey;
-  text-align: center;
-  width: 4.1em;
-  line-height: 1.5em;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 1em;
+    font-size: 0.8em;
+    border: 1px solid $darkGrey;
+    text-align: center;
+    width: 4.1em;
+    line-height: 1.5em;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 1em;
+    .day, .month, .year {
+        display: block;
+    }
+    .day {
+        float: left;
+        width: 1.7em;
+        background: $light;
+        color: $dark;
+    }
+    .month {
+        float: right;
+        width: 2.3em;
+        color: $light;
+        background: $dark;
+        border-left: 1px solid $mainColor;
+    }
+    .year {
+        line-height: 3ex;
+        clear: both;
+        background: $higlightColorShadow;
+        color: $mainColor;
+        border-top: 1px solid $higlightColorShadow;
+    }
 }
 
-.date .day, .date .month, .date .year {
-  display: block;
-}
-
-.date .day {
-  float: left;
-  width: 1.7em;
-  background: $light;
-  color: $dark;
-}
-
-.date .month{
-  float: right;
-  width: 2.3em;
-  color: $light;
-  background: $dark;
-  border-left: 1px solid $mainColor;
-  }
-
-.date .year{
-  line-height: 3ex;
-  clear: both;
-  background: $higlightColorShadow;
-  color: $mainColor;
-  border-top: 1px solid $higlightColorShadow;
-  }
 
 .archive {
     background-color: rgba(#000,0.02);
@@ -294,12 +303,13 @@ article article {
 .nicer {
   font-family: "Lucida Grande", Tahoma
 }
+
 #elementblock {
     ul {
         list-style-type: none;
         li {
             display: inline-block;
-            @include column(3,false);
+            @include column(3);
             a {
                 float: left;
                 background-color: rgba(#000,0.02);
@@ -315,6 +325,19 @@ article article {
         }
     }
 }
+
 .return {
     @include innerblock();
+    padding: .4em .3em 0;
+    margin: 1em 0;
+}
+
+article footer {
+    @include column(3);
+    @include innerblock;
+    font-size: .7em;
+    opacity: .6;
+    ul {
+        list-style-type: none;
+    }
 }
