--- a/site/css/main.css
+++ b/site/css/main.css
@@ -30,17 +30,48 @@ a:hover {
 }
 
 /* line 85, ../src/main.scss */
+img {
+  max-width: 100%;
+}
+
+/* line 88, ../src/main.scss */
+article img {
+  background-color: rgba(0, 0, 0, 0.02);
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  padding: 15px;
+  width: 344px;
+  margin-right: 24px;
+}
+/* line 40, ../src/main.scss */
+article img > * {
+  padding: 20px;
+}
+/* line 43, ../src/main.scss */
+article img:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+/* line 95, ../src/main.scss */
 .corps {
   margin: 48px 0;
   line-height: 32px;
 }
 
-/* line 90, ../src/main.scss */
+/* line 100, ../src/main.scss */
 #metacontainer {
   border-bottom: 1px solid #888;
 }
 
-/* line 93, ../src/main.scss */
+/* line 103, ../src/main.scss */
 body > header {
   margin: 0;
   color: #CCC;
@@ -53,7 +84,7 @@ body > header {
   box-shadow: 0px 0px 5px #333333;
 }
 
-/* line 101, ../src/main.scss */
+/* line 111, ../src/main.scss */
 body > footer {
   border-top: solid 1px rgba(0, 0, 0, 0.1);
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
@@ -68,30 +99,55 @@ body > footer {
   -o-box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
   box-shadow: rgba(0, 0, 0, 0.2) 0 0 7px inset;
 }
-/* line 111, ../src/main.scss */
+/* line 121, ../src/main.scss */
 body > footer a {
   color: #2c5490;
 }
 
-/* line 116, ../src/main.scss */
+/* line 126, ../src/main.scss */
 article > footer {
-  color: #88aadd;
   margin: 48px 0;
+  width: 252px;
+  margin-right: 24px;
+  background-color: rgba(0, 0, 0, 0.02);
+  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  font-size: .7em;
 }
-/* line 119, ../src/main.scss */
+/* line 128, ../src/main.scss */
+article > footer ul {
+  list-style-type: none;
+}
+/* line 40, ../src/main.scss */
+article > footer > * {
+  padding: 20px;
+}
+/* line 43, ../src/main.scss */
+article > footer:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+/* line 134, ../src/main.scss */
 article > footer ul {
   list-style-type: none;
 }
 
-/* line 126, ../src/main.scss */
+/* line 141, ../src/main.scss */
 nav {
   border-bottom: solid 1px rgba(0, 0, 0, 0.1);
 }
-/* line 129, ../src/main.scss */
+/* line 144, ../src/main.scss */
 nav ul {
   list-style-type: none;
 }
-/* line 131, ../src/main.scss */
+/* line 146, ../src/main.scss */
 nav ul li {
   display: inline-block;
   height: 50px;
@@ -101,7 +157,7 @@ nav ul li {
   border-left: solid 1px rgba(255, 255, 255, 0.1);
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
-/* line 139, ../src/main.scss */
+/* line 154, ../src/main.scss */
 nav ul li * {
   display: block;
   margin-right: 0px;
@@ -110,21 +166,21 @@ nav ul li * {
   height: 100%;
   text-shadow: -1px -1px rgba(0, 0, 0, 0.2), 1px 1px rgba(0, 0, 0, 0.2);
 }
-/* line 147, ../src/main.scss */
+/* line 162, ../src/main.scss */
 nav ul li span.active {
   background-color: rgba(0, 0, 0, 0.1);
 }
-/* line 150, ../src/main.scss */
+/* line 165, ../src/main.scss */
 nav ul li a {
   color: rgba(255, 255, 255, 0.8);
 }
-/* line 152, ../src/main.scss */
+/* line 167, ../src/main.scss */
 nav ul li a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 161, ../src/main.scss */
+/* line 176, ../src/main.scss */
 header #choixrss, header #choixlang {
   display: block;
   margin-right: 0px;
@@ -137,7 +193,7 @@ header #choixrss, header #choixlang {
   border-left: solid 1px rgba(255, 255, 255, 0.1);
   border-right: solid 1px rgba(0, 0, 0, 0.2);
 }
-/* line 172, ../src/main.scss */
+/* line 187, ../src/main.scss */
 header #choixrss a, header #choixlang a {
   color: #bcd0ee;
   display: block;
@@ -146,13 +202,13 @@ header #choixrss a, header #choixlang a {
   padding: 0 10px 0 10px;
   text-align: center;
 }
-/* line 180, ../src/main.scss */
+/* line 195, ../src/main.scss */
 header #choixrss a:hover, header #choixlang a:hover {
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(255, 255, 255, 0.1);
 }
 
-/* line 187, ../src/main.scss */
+/* line 202, ../src/main.scss */
 nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
   -moz-box-shadow: #333377 0 0 8px inset;
   -webkit-box-shadow: #333377 0 0 8px inset;
@@ -160,12 +216,12 @@ nav ul li a:hover, #choixlang a:hover, #choixrss a:hover {
   box-shadow: #333377 0 0 8px inset;
 }
 
-/* line 192, ../src/main.scss */
+/* line 207, ../src/main.scss */
 #main, #container {
   margin: 0px auto;
 }
 
-/* line 196, ../src/main.scss */
+/* line 211, ../src/main.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Expletus Sans',Futura,sans-serif;
   text-shadow: 0px -1px 0px #223366, 0px 1px 0px white;
@@ -174,12 +230,12 @@ h1, h2, h3, h4, h5, h6 {
   margin: 48px 0;
   text-align: center;
 }
-/* line 205, ../src/main.scss */
+/* line 220, ../src/main.scss */
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
   text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
 }
 
-/* line 211, ../src/main.scss */
+/* line 226, ../src/main.scss */
 article article {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -192,6 +248,7 @@ article article {
   -ms-border-radius: 5px;
   -khtml-border-radius: 5px;
   border-radius: 5px;
+  margin: 24px 0;
 }
 /* line 40, ../src/main.scss */
 article article > * {
@@ -201,13 +258,13 @@ article article > * {
 article article:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
-/* line 213, ../src/main.scss */
+/* line 228, ../src/main.scss */
 article article .date {
   float: right;
   padding: 0;
   margin: 20px;
 }
-/* line 214, ../src/main.scss */
+/* line 230, ../src/main.scss */
 article article h1, article article h2, article article h3, article article h4, article article h5, article article h6 {
   text-align: left;
   font-size: 36px;
@@ -215,17 +272,17 @@ article article h1, article article h2, article article h3, article article h4, 
   margin: 0 0 16px;
 }
 
-/* line 222, ../src/main.scss */
+/* line 238, ../src/main.scss */
 .intro {
   margin-bottom: 24px;
 }
 
-/* line 226, ../src/main.scss */
+/* line 242, ../src/main.scss */
 .sc {
   font-variant: small-caps;
 }
 
-/* line 230, ../src/main.scss */
+/* line 246, ../src/main.scss */
 .block {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -253,29 +310,29 @@ article article h1, article article h2, article article h3, article article h4, 
 .block:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
-/* line 234, ../src/main.scss */
+/* line 250, ../src/main.scss */
 .block h3 {
   text-size: .6em;
   text-align: left;
   margin: 0 0 12px;
 }
 
-/* line 243, ../src/main.scss */
+/* line 259, ../src/main.scss */
 .right {
   float: right;
 }
 
-/* line 246, ../src/main.scss */
+/* line 262, ../src/main.scss */
 .left {
   float: left;
 }
 
-/* line 249, ../src/main.scss */
+/* line 265, ../src/main.scss */
 .flush {
   clear: both;
 }
 
-/* line 252, ../src/main.scss */
+/* line 268, ../src/main.scss */
 .slideshow {
   background: #88aadd;
   color: #fafafa;
@@ -297,12 +354,12 @@ article article h1, article article h2, article article h3, article article h4, 
 .slideshow > * {
   margin: 20px;
 }
-/* line 254, ../src/main.scss */
+/* line 270, ../src/main.scss */
 .slideshow > * {
   padding: 3em;
 }
 
-/* line 259, ../src/main.scss */
+/* line 275, ../src/main.scss */
 .date {
   font-size: 0.8em;
   border: 1px solid #7689a6;
@@ -313,18 +370,18 @@ article article h1, article article h2, article article h3, article article h4, 
   vertical-align: middle;
   margin-right: 1em;
 }
-/* line 268, ../src/main.scss */
+/* line 284, ../src/main.scss */
 .date .day, .date .month, .date .year {
   display: block;
 }
-/* line 271, ../src/main.scss */
+/* line 287, ../src/main.scss */
 .date .day {
   float: left;
   width: 1.7em;
   background: #a9c5ee;
   color: #2c5490;
 }
-/* line 277, ../src/main.scss */
+/* line 293, ../src/main.scss */
 .date .month {
   float: right;
   width: 2.3em;
@@ -332,7 +389,7 @@ article article h1, article article h2, article article h3, article article h4, 
   background: #2c5490;
   border-left: 1px solid #88aadd;
 }
-/* line 284, ../src/main.scss */
+/* line 300, ../src/main.scss */
 .date .year {
   line-height: 3ex;
   clear: both;
@@ -341,7 +398,7 @@ article article h1, article article h2, article article h3, article article h4, 
   border-top: 1px solid #223366;
 }
 
-/* line 294, ../src/main.scss */
+/* line 310, ../src/main.scss */
 .archive {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -357,27 +414,27 @@ article article h1, article article h2, article article h3, article article h4, 
   padding: 2em;
 }
 
-/* line 300, ../src/main.scss */
+/* line 316, ../src/main.scss */
 .tag {
   cursor: pointer;
 }
 
-/* line 303, ../src/main.scss */
+/* line 319, ../src/main.scss */
 .nicer {
   font-family: "Lucida Grande", Tahoma;
 }
 
-/* line 308, ../src/main.scss */
+/* line 324, ../src/main.scss */
 #elementblock ul {
   list-style-type: none;
 }
-/* line 310, ../src/main.scss */
+/* line 326, ../src/main.scss */
 #elementblock ul li {
   display: inline-block;
   width: 252px;
   margin-right: 24px;
 }
-/* line 313, ../src/main.scss */
+/* line 329, ../src/main.scss */
 #elementblock ul li a {
   float: left;
   background-color: rgba(0, 0, 0, 0.02);
@@ -395,12 +452,12 @@ article article h1, article article h2, article article h3, article article h4, 
   text-align: center;
   width: 80%;
 }
-/* line 322, ../src/main.scss */
+/* line 338, ../src/main.scss */
 #elementblock ul li a:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 329, ../src/main.scss */
+/* line 345, ../src/main.scss */
 .return {
   background-color: rgba(0, 0, 0, 0.02);
   -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
@@ -425,33 +482,16 @@ article article h1, article article h2, article article h3, article article h4, 
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-/* line 335, ../src/main.scss */
-article footer {
-  width: 252px;
+/* line 352, ../src/main.scss */
+#related_articles #previous_articles {
+  width: 344px;
   margin-right: 24px;
-  background-color: rgba(0, 0, 0, 0.02);
-  -moz-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -webkit-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -o-box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  box-shadow: white 0 0 3px, rgba(0, 0, 0, 0.2) 0 0 3px inset;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -o-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -khtml-border-radius: 5px;
-  border-radius: 5px;
-  font-size: .7em;
-  opacity: .6;
+  float: left;
 }
-/* line 40, ../src/main.scss */
-article footer > * {
-  padding: 20px;
-}
-/* line 43, ../src/main.scss */
-article footer:hover {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-/* line 340, ../src/main.scss */
-article footer ul {
-  list-style-type: none;
+/* line 356, ../src/main.scss */
+#related_articles #next_articles {
+  float: right;
+  text-align: right;
+  width: 344px;
+  margin-right: 24px;
 }
