--- a/layouts/default.html
+++ b/layouts/default.html
@@ -93,5 +93,6 @@
             <div class="clear"></div>
         </div>
         <%= clicky_analytics %>
+        <%= user_voice %>
     </body>
 </html>
