Uniformisation of colors

--- a/site/src/main.scss
+++ b/site/src/main.scss
@@ -23,8 +23,8 @@ $dark     : #2C5490;
 $darkGrey : #7689A6;
 
 $backgroundColor: $mainBackgroundColor;
-$hoverColor: #E66;
-$hoverColorShadow: #411;
+$hoverColor: #CC6D00;
+$hoverColorShadow: #883C00;
 $titleColor: $darkGrey;
 $higlightColor: #8AD;
 $higlightColorShadow: #236;
