--- a/site/css/main.css
+++ b/site/css/main.css
@@ -26,7 +26,7 @@ a {
 
 /* line 81, ../src/main.scss */
 a:hover {
-  color: #ee6666;
+  color: #cc6d00;
 }
 
 /* line 85, ../src/main.scss */
@@ -240,7 +240,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* line 223, ../src/main.scss */
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
-  text-shadow: 0px -1px 0px #441111, 0px 1px 0px white;
+  text-shadow: 0px -1px 0px #883c00, 0px 1px 0px white;
 }
 
 /* line 229, ../src/main.scss */
